<resources>
    <string name="tab_view1">前瞻</string>
    <string name="tab_view2">资讯</string>
    <string name="tab_view3">数据</string>
    <string name="tab_view4">战报</string>
    <string name="tab_view5">推荐</string>
     <string name="goInfo">资讯中心</string>
     <string name="goNotic">竞彩公告</string>
     <string name="goSoccer">竞彩足球</string>
     <string name="goBask">竞彩篮球</string>
     <string name="goSelect">选彩记录</string>
     <string name="goShouzhu">受注赛程</string>
     <string name="goLive">比分直播</string>
     <string name="goResult">赛果开奖</string>
     <string name="goMap">地图</string>
     <string name="goFeedback">反馈</string>
     <string name="goInivte">邀请</string>
     <string name="goAbout">关于</string>
    <string name="accountInfo">受注赛程</string>
    <string name="downloadManager">同奖回查</string>
	<string name="app_name">旧竞彩网</string>
	<string name="version">中国竞彩网Android版</string>
	 <string name="app_host">http://home.lottery.org.cn/mapinfo/getloc.php?</string>
	 <string name="app_host_getNear">http://home.lottery.org.cn/mapinfo/getNear.php?</string>
    <string name="no_date" />
    <string name=" locateloading">正在定位……</string>
    <string name="net_error">当前网络不可用，请先连接Internet！</string>
	<string name="version1">版本:</string>
	<string name="company_name">中国体育彩票竞猜游戏官方信息发布平台</string>
	<string name="loadTitle"><strong>正在更新数据</strong></string>
	<string name="LoadContent"><strong>请稍候……</strong></string>
	<string name="web">
		<u>http://www.sporttery.cn</u>
	</string>
	<string name="wap">
		<u>http://wap.sporttery.cn</u>
	</string>
	<string name="win_txt">胜</string>
    <string name="draw_txt">平</string>
    <string name="fail_txt">负</string>
    <string name="cp_stack">注，</string>
    <string name="cp_total">共</string>
    <string name="cp_yuan">元</string>
    <string name="wanfa">玩  法：胜 负 平</string>
    <string name="zhanjixianqi">战绩详情</string>
	<string name="score_onlive_setting">设置</string>
	<string name="loading">正在检查新版本...</string>
	<string name="str_zuqiu">足球</string>
	<string name="str_zuqiu_onlive">足球比分直播</string>
	<string name="str_lanqiu">篮球</string>
	<string name="zhanji">我的战绩</string>
	<string name="result">结果</string>
	<string name="str_shouzhu">受注赛程</string>
	<string name="str_saiguokaijiang">赛果开奖</string>
	<string name="str_score_onlive">比分直播</string>
	<string name="str_score">竞彩足球</string>
	<string name="str_wodeguanzhu">竞彩店</string>
	<string name="str_gengduo">更多</string>
	<string name="srssgjz">输入搜索关键字</string>
	<string name="about">关于</string>
	<string name="exit">退出</string>
	<string name="flush">刷新</string>
	<string name="update">升级</string>
	<string name="down_finish">下载完成</string>
	<string name="install">安装</string>
	<string name="down_finish1">下载完成,请点击安装!</string>
	<string name="down_error">下载出错</string>
	<string name="down_error1">下载更新出错,请检查网络并重新更新</string>
	<string name="update_tip">竞彩网客户端升级提示</string>
	<string name="information">消息</string>
	<string name="guanzhu">关注</string>
	<string name="euroFoot">欧洲杯</string>
	<string name="report">反馈</string>
	<string name="report_ok">反馈发送成功</string>
	<string name="report_fail">反馈发送失败</string>
	<string name="isexit">是否退出？</string>
	<string name="yes">是</string>
	<string name="no">否</string>
	<string name="tip">提示 </string>
	<string name="tip1">此场赛事无欧指数据 </string>
	<string name="tip2">此场赛事无亚盘数据 </string>
	<string name="tip3">此场赛事无玩法数据 </string>
	<string name="tip4">此场赛事无分析数据 </string>
	<string name="tip5">没有找到对应的数据</string>
	<string name="dcfdjj">单场浮动奖金</string>
	<string name="kjjg">开奖结果</string>
	<string name="gggdjj_kjjg">过关固定奖金(开奖结果)</string>
	<string name="dzjj">单注奖金[元]</string>
	<string name="ztzje">总投注金额[元]</string>
	<string name="zjzs">中奖注数[注]</string>
	<string name="djxzsj">点击选择时间</string>
	<string name="qxzsj">请选择时间</string>
	<string name="djxzls">所有赛制</string>
	<string name="inplaying">正在进行</string>
	<string name="setting">设置</string>
	<string name="seting_total_goal">总进球达到设定数量时提示</string>
	<string name="setting_score">比分变化时提示</string>
	<string name="setting_alert_type">提示类型</string>
	<string name="qxzls">请选择联赛</string>
	<string name="djxznba">全部球队</string>
	<string name="qxznba">请选择球队</string>
	<string name="queding">确定</string>
	<string name="str_jintian">今天</string>
	<string name="menu_setting">设置</string>
	<string name="menu_about">关于</string>
	<string name="menu_feedback">反馈</string>
	<string name="status">状态</string>
	<string name="ytjdgz">已添加关注</string>
	<string name="yscgz">已取消关注</string>
	<string name="qxgz">取消关注</string>
	<string name="jgz">添加关注</string>
	<string name="ygz">已关注</string>
	<string name="progress_wait">请稍候...</string>
	<string name="myzdfhtjdsgkjsj">没有找到符合条件的赛果开奖数据</string>
	<string name="progress_net_error">获取数据失败，请检查你的网络！</string>
	<string name="progress_reload">重新加载</string>
	<string name="mycxdbssj">没有查询到指定日期的比赛数据</string>
	<string name="cwdztm">错误的状态码</string>
	<string name="h">胜:</string>
	<string name="d">平:</string>
	<string name="a">负:</string>
	<string name="h1">胜</string>
	<string name="d1">平</string>
	<string name="a1">负</string>
	<string name="up">↑</string>
	<string name="down">↓</string>
	<string name="h2">主队胜</string>
	<string name="a2">主队负</string>
	<string name="yszf">预设总分</string>
	<string name="dyys">大于预设</string>
	<string name="xyys">小于预设</string>
	<string name="sg">赛果</string>
	<string name="sg1">赛果</string>
	<string name="handicap">让球:</string>
	<string name="half">半场</string>
	<string name="audience">全场</string>
	<string name="award">奖金:</string>
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="select_status">请选择状态</string>
	<string name="all_status">所有状态</string>
	<string name="rewarded">已派奖</string>
	<string name="reward">奖 ></string>
	<string name="single_award">单场固定奖金</string>
	<string name="result_award">赛果和开奖</string>
	<string name="hda_pass_award">胜平负过关固定奖金</string>
	<string name="total_goal_pass_award">总进球数过关固定奖金</string>
	<string name="hall_pass_award">半全场过关固定奖金</string>
	<string name="result_single_award">开奖结果及单注浮动奖金</string>
	<string name="score_fixed_award">比分固定奖金</string>
	<string name="show_time">发布时间:</string>
	<string name="show_time1">发布时间</string>
	<string name="onlive_tint">直播提示</string>
	<string name="gameover">已完场</string>
	    <string name="feedback">回查</string>
	    <string name="homewin">主胜:</string>
	    <string name="homelose">主负:</string>
	    <string name="awaywin">客胜:</string>
	    <string name="all">全部</string>
	    <string name="draw1">平局:</string>
	    <string name="handicap1">让球:</string>
	    <string name="handicap_score">让分:</string>
	    <string name="select_leguals">请选择联赛</string>
	    <string name="select_ball_type">请选择球类型</string>
	    <string name="select_home">请选择主队</string>
	    <string name="select_away">请选择客队</string>
	    <string name="select_homeWin_">请选择主胜分</string>
	    <string name="select_awayWin_">请选择客胜分</string>
	    <string name="select_draw_">请选择平局分</string>
	    <string name="select_handicap_">请选择让球</string>
	    <string name="select_handicap_bb">请选择让分</string>
	    <string name="query">查询</string>
	    <string name="reset">重置</string>
	    <string name="handicap_basketball">让分:</string>
	    <string name="similar_reward">相同(相似)奖金 查询</string>
	<string name="w1">1-5</string>
	<string name="w2">6-10</string>
	<string name="w3">11-15</string>
	<string name="w4">16-20</string>
	<string name="w5">21-25</string>
	<string name="w6">26+</string>
	<string name="g0">0</string>
	<string name="g1">1</string>
	<string name="g2">2</string>
	<string name="g3">3</string>
	<string name="g4">4</string>
	<string name="g5">5</string>
	<string name="g6">6</string>
	<string name="g7">7+</string>
	<string name="dyj">第一节</string>
	<string name="dej">第二节</string>
	<string name="dsj">第三节</string>
	<string name="dsij">第四节</string>
	<string name="qc">全场</string>
	<string name="bc">半场</string>
	<string name="zddf">主队得分</string>
	<string name="kddf">客队得分</string>
	<string name="hh">胜胜</string>
	<string name="hd">胜平</string>
	<string name="ha">胜负</string>
	<string name="dh">平胜</string>
	<string name="dd">平平</string>
	<string name="da">平负</string>
	<string name="ah">负胜</string>
	<string name="ad">负平</string>
	<string name="aa">负负</string>
	<string name="wf">玩法</string>
	<string name="wf_spf">胜平负</string>
	<string name="wf_sf">胜负</string>
	<string name="wf_rfsf">让分胜负</string>
	<string name="wf_sfc">胜分差</string>
	<string name="wf_dxf">大小分</string>
	<string name="wf_rq">让球</string>
	<string name="wf_rf">让分</string>
	<string name="wf_zjq">总进球</string>
	<string name="wf_bqc">半全场胜平负</string>
	<string name="wf_bf">比分</string>
	<string name="fc">分差</string>
	<string name="ks">客胜</string>
	<string name="zs">主胜</string>
    <string name="detail">详细</string>
    <string name="detail_short">详</string>
	<string name="fx">分析</string>
	<string name="fx_ldwj">两队往季对阵竞彩奖金及赛果</string>
	<string name="fx_zdjq">主队近期战绩(10场)</string>
	<string name="fx_kdjq">客队近期战绩(10场)</string>
	<string name="fx_zdwl">主队未来5场赛事</string>
	<string name="fx_kdwl">客队未来5场赛事</string>
	<string name="fx_lspm">联赛排名</string>
   <string name="select_company">请选择博彩公司</string>
	<string name="oz">欧指</string>
	<string name="yp">亚盘</string>
	<string name="jcjj">竞彩奖金</string>
	<string name="bjzs">百家指数</string>
	<string name="company">公司</string>
	<string name="europe_wa">胜率</string>
	<string name="europe_da">平率</string>
	<string name="europe_aa">负率</string>
	<string name="europe_kw">凯利指数胜</string>
	<string name="europe_kd">凯利指数平</string>
	<string name="europe_ka">凯利指数负</string>
	<string name="europe_rr">返还率</string>
	<string name="asia_l1">初盘负水位</string>
	<string name="asia_d1">初盘亚盘</string>
	<string name="asia_w1">初盘胜水位</string>
	<string name="asia_l2">即时受注盘负水位</string>
	<string name="asia_d2">即时受注盘亚盘</string>
	<string name="asia_w2">即时受注盘胜水位</string>
	<string name="saishiriqi">赛事日期</string>
	<string name="saishibianhao">赛事编号</string>
	<string name="liansaimingcheng">联赛名称</string>
	<string name="zhudui">主队</string>
	<string name="kedui">客队</string>
	<string name="bifen">比分</string>
	<string name="caiguo">彩果</string>
	<string name="banchang">半场</string>
	<string name="quanchang">全场</string>
	<string name="goalline">主队让球</string>
	<string name="zongjinqiushu">总进球数</string>
	<string name="banquanchang">半全场</string>
	<string name="paiming">排名</string>
	<string name="qiudui">球队</string>
	<string name="sai">赛</string>
	<string name="save_confirm">设置生效条件：
\r\n1.已勾选“进行中”的提示赛事
\r\n2.打开比分直播页面
\r\n3.手机正常状态</string>
	<string name="save">保存</string>
	<string name="save_confirm_title">保存提醒</string>
	<string name="win">胜</string>
	<string name="draw">平</string>
	<string name="lose">负</string>
	<string name="goal">进</string>
	<string name="losegoal">失</string>
	<string name="net">净</string>
	<string name="score">积分</string>
	<string name="search">搜索</string>
	<string name="result_tip">进行中</string>
	<string name="result_tip1">已取消</string>
	<string name="progress_qsh">请稍候...</string>
	<string name="progress_hqsjsb">获取数据失败，请检查你的网络！</string>
	<string name="progress_cxjz">重试</string>
	<string name="alert_half">中场休息</string>
	<string-array name="leguas_array">
		<item >所有赛制</item>
		<item >苏足总杯</item>
		<item >英锦标赛</item>
		<item >欧冠</item>
		<item >意大利</item>
	</string-array>
	<string-array name="status_array">
		<item >进行中</item>
		<item >已完场</item>
	</string-array>
	<string-array name="status_basket_array">
	    <item>进行中</item>
	    <item>已完场</item>
	</string-array>
	<string-array name="status_show_basket_array">
	    <item>未赛</item>
	    <item>第一节</item>
	    <item>第一节休息</item>
	    <item>第二节</item>
	    <item>第二节休息</item>
	    <item>第三节</item>
	    <item>第三节休息</item>
	    <item>第四节</item>
	    <item>第四节休息</item>
	    <item>加时</item>
	    <item>加时休息</item>
	    <item>已完场</item>
	</string-array>
	<string-array name="status_shown_array">
		<item >未赛</item>
		<item >上半场</item>
		<item >中场</item>
		<item >下半场</item>
		<item >加时</item>
		<item >推迟</item>
		<item >中断</item>
		<item >腰斩</item>
		<item >取消</item>
		<item >完场</item>
	</string-array>
</resources>