<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical">
	<TableLayout android:id="@+id/table" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TableRow android:background="@drawable/itembg">
			<TextView android:layout_width="75dp" android:layout_height="25dp"
				style="@style/Style6" android:gravity="center" android:text="@string/liansaimingcheng"
				android:singleLine="true" />
			<TextView android:layout_width="65dp" android:layout_height="25dp"
				style="@style/Style6" android:gravity="center" android:text="@string/saishiriqi"
				android:singleLine="true" />
			<TextView android:layout_width="75dp" android:layout_height="25dp"
				style="@style/Style6" android:gravity="center" android:text="@string/zhudui"
				android:singleLine="true" />
			<TextView android:layout_width="30dp" android:layout_height="25dp"
				style="@style/Style6" android:gravity="center" android:text="@string/quanchang"
				android:singleLine="true" />
			<TextView android:layout_width="75dp" android:layout_height="25dp"
				style="@style/Style6" android:gravity="center" android:text="@string/kedui"
				android:singleLine="true" />
			<TextView android:layout_width="80dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/goalline"
				android:singleLine="true" android:visibility="gone" />
			<TextView android:layout_width="50dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/banchang"
				android:singleLine="true" android:visibility="gone" />
			<TextView android:layout_width="50dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/caiguo"
				android:singleLine="true" android:visibility="gone" />
			<TextView android:layout_width="50dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/h1"
				android:singleLine="true" android:visibility="gone" />
			<TextView android:layout_width="50dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/d1"
				android:singleLine="true" android:visibility="gone" />
			<TextView android:layout_width="50dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/a1"
				android:singleLine="true" android:visibility="gone" />
			<TextView android:layout_width="50dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/bifen"
				android:singleLine="true" android:visibility="gone" />
			<TextView android:layout_width="80dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/zongjinqiushu"
				android:singleLine="true" android:visibility="gone" />
			<TextView android:layout_width="80dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/banquanchang"
				android:singleLine="true" android:visibility="gone" />
		</TableRow>
	</TableLayout>
</LinearLayout>
