<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:orientation="vertical">
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TableRow android:background="@drawable/itembg">
			<TextView android:layout_width="80dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/g0" />
			<TextView android:layout_width="80dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/g1" />
			<TextView android:layout_width="80dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/g2" />
			<TextView android:layout_width="80dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/g3" />
		</TableRow>
		<TableRow android:background="@drawable/itembg1">
			<TextView android:id="@+id/g0" android:layout_width="80dp"
				android:layout_height="25dp" style="@style/Style4" android:gravity="center" />
			<TextView android:id="@+id/g1" android:layout_width="80dp"
				android:layout_height="25dp" style="@style/Style4" android:gravity="center" />
			<TextView android:id="@+id/g2" android:layout_width="80dp"
				android:layout_height="25dp" style="@style/Style4" android:gravity="center" />
			<TextView android:id="@+id/g3" android:layout_width="80dp"
				android:layout_height="25dp" style="@style/Style4" android:gravity="center" />
		</TableRow>
		<TableRow android:background="@drawable/itembg">
			<TextView android:layout_width="80dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/g4" />
			<TextView android:layout_width="80dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/g5" />
			<TextView android:layout_width="80dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/g6" />
			<TextView android:layout_width="80dp" android:layout_height="25dp"
				style="@style/Style1" android:gravity="center" android:text="@string/g7" />
		</TableRow>
		<TableRow android:background="@drawable/itembg1">
			<TextView android:id="@+id/g4" android:layout_width="80dp"
				android:layout_height="25dp" style="@style/Style4" android:gravity="center" />
			<TextView android:id="@+id/g5" android:layout_width="80dp"
				android:layout_height="25dp" style="@style/Style4" android:gravity="center" />
			<TextView android:id="@+id/g6" android:layout_width="80dp"
				android:layout_height="25dp" style="@style/Style4" android:gravity="center" />
			<TextView android:id="@+id/g7" android:layout_width="80dp"
				android:layout_height="25dp" style="@style/Style4" android:gravity="center" />
		</TableRow>
	</TableLayout>
</LinearLayout>